<resources>
    <!-- Title of the application. [CHAR LIMIT = 13]-->
    <string name="app_name" translatable="false">PopularMovies</string>

    <!-- Title of the DetailActivity [CHAR LIMIT=30]-->
    <string name="detail_activity_name">Movie details</string>

    <!-- Content description of the movie poster [CHAR LIMIT=30] -->
    <string name="movie_poster_image">Movie poster</string>

    <!-- Content description of the add/remove from favorites button [CHAR LIMIT=30] -->
    <string name="favorites_button">Favorites button</string>

    <!-- Content description of the play trailer button [CHAR LIMIT=30] -->
    <string name="play_trailer_button">Play trailer button</string>

    <!-- Error message that appears when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection</string>

    <!-- Text to display in the grid when there are no movies [CHAR LIMIT=NONE]-->
    <string name="no_movies_found">No movies found</string>

    <!-- Text to display in the DetailActivity when there are no trailers [CHAR LIMIT=NONE]-->
    <string name="no_trailers_found">No trailers found</string>

    <!-- Text to display in the DetailActivity when there are no trailers [CHAR LIMIT=NONE]-->
    <string name="no_reviews_found">No reviews found</string>

    <!-- Maximum possible user rating, displayed in the DetailActivity [CHAR LIMIT=NONE]-->
    <string name="user_rating_maximum" translatable="false">/10</string>

    <!-- Label for the release date in the DetailActivity [CHAR LIMIT=30] -->
    <string name="release_date_label">Release date:</string>

    <!-- Label for the user rating in the DetailActivity [CHAR LIMIT=30] -->
    <string name="user_rating_label">User rating:</string>

    <!-- Label for the review in the DetailActivity [CHAR LIMIT=30] -->
    <string name="review_label">Reviews</string>

    <!-- Label for the full review button in the DetailActivity [CHAR LIMIT = 20] -->
    <string name="review_button">Full review</string>

    <!-- Label for the trailer in the DetailActivity [CHAR LIMIT=30] -->
    <string name="trailer_label">Trailers</string>

    <!-- Label for sort-by most popular option [CHAR LIMIT=30]-->
    <string name="settings_sort_by_most_popular_label">Most popular</string>

    <!-- Value of the sort-by most popular option [CHAR LIMIT=NONE]-->
    <string name="settings_sort_by_most_popular_value" translatable="false">popular</string>

    <!-- Label for sort-by top rated option [CHAR LIMIT=30]-->
    <string name="settings_sort_by_top_rated_label">Top rated</string>

    <!-- Value of the sort-by top rated option [CHAR LIMIT=NONE]-->
    <string name="settings_sort_by_top_rated_value" translatable="false">top_rated</string>

    <!-- Label for sort-by favorites option [CHAR LIMIT=30]-->
    <string name="settings_sort_by_favorites_label">Favorites</string>

    <!-- Text for the toast after adding the movie to the Favorites list [CHAR LIMIT=NONE] -->
    <string name="toast_added_to_favorites">The movie has been added to the Favorites list.</string>

    <!-- Text for the toast after deleting the movie from the Favorites list [CHAR LIMIT=NONE] -->
    <string name="toast_deleted_from_favorites">The movie has been deleted from the Favorites list.</string>

    <!-- Text for the case if there are no movies in the Favorites list [CHAR LIMIT=NONE] -->
    <string name="no_favorite_movies">There are no movies in the Favorites list.</string>
</resources>
